# DailyCraft

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json
.windsurf/rules/: Tauri.md
src/: App.vue  README.md
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: ocr_service.py
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: ai.rs  deskpet.rs  diary.rs  mod.rs  system.rs  update.rs
src-tauri/src/models/: config.rs  event.rs  mod.rs  segment.rs
src-tauri/src/services/: icon_extractor.rs  input_tracker.rs  mod.rs  ocr.rs  screenshot.rs  storage.rs  window_tracker.rs
src/api/: activity.ts  ai.ts  deskpet.ts  diary.ts  update.ts
src/components/: Toast.vue  UpdateDialog.vue
src/components/flow/: ActivityFlow.vue  ActivityNode.vue
src/components/layout/: Header.vue  Sidebar.vue
src/deskpet/: PetOverlay.vue  deskpet.png.md
src/deskpet/config/: defaultPet.ts
src/deskpet/managers/: ConfigManager.ts  InputManager.ts  index.ts
src/deskpet/scenes/: PetScene.ts
src/deskpet/types/: IPet.ts  ISpriteConfig.ts
src/types/: flow.ts
src/views/: About.vue  Chat.vue  Dashboard.vue  Diary.vue  Home.vue  Notes.vue  Screenshots.vue  Settings.vue
