[package]
name = "dailycraft"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dailycraft_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
rdev = "0.5"
once_cell = "1.19"

reqwest = { version = "0.12", features = ["json", "native-tls", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Media_Ocr",
    "Graphics_Imaging",
    "Storage",
    "Storage_Streams",
    "Foundation",
    "Foundation_Collections",
    "Globalization",
] }
image = "0.25"
base64 = "0.22"
screenshots = "0.8"

